Minor code changes

--- a/lib/dedalo/component_radio_button/html/component_radio_button_search.phtml
+++ b/lib/dedalo/component_radio_button/html/component_radio_button_search.phtml
@@ -33,7 +33,7 @@
 				$html_content .=' />';
 
 
-				$html_content .= "<ul class=\"radio_button_ul_list\">";
+				$html_content .= '<ul class="radio_button_ul_list">';
 				
 				# INPUT
 				#$html_content .= "<span id=\"search_component_$tipo\">";
@@ -77,7 +77,7 @@
 				$i++;}
 				#$html_content .= "</span>";
 
-				$html_content .= "</ul>";//end radio_button_ul_list
+				$html_content .= '</ul>';//end radio_button_ul_list
 
 				# LOGICAL OPERATORS
 				#$html_content .= operator::get_search_logical_operators_html($tipo,$ar_logical_operators);							
@@ -92,5 +92,6 @@
 	print $html_content;
 	
 	
-	print "</div>"; //wrap
-?>
+	print '</div>'; //wrap
+
+
