--- a/lib/dedalo/tools/tool_layout_print/html/tool_layout_print_render.phtml
+++ b/lib/dedalo/tools/tool_layout_print/html/tool_layout_print_render.phtml
@@ -23,7 +23,7 @@ $html='';
 			# INFO STATS
 			$html .= "<div id=\"info_stats\" class=\"\">";
 			$html .= " <span>".label::get_label('total_records')."</span> <strong>$n_records</strong><br>";
-			$html .= " <span>".label::get_label('total_pages')."</span> <strong>$n_pages</strong>";
+			#$html .= " <span>".label::get_label('total_pages')."</span> <strong>$n_pages</strong>";
 			$html .= "</div>";
 
 
