Fix syntax error on component_portal_print

--- a/lib/dedalo/component_portal/html/component_portal_print.phtml
+++ b/lib/dedalo/component_portal/html/component_portal_print.phtml
@@ -166,7 +166,7 @@
 																							$current_row->section_id, //$current_row->lc_object->section_id,
 																							'print',
 																							DEDALO_DATA_LANG,
-																							$current_row->section_tipo, //$current_row->lc_object->section_tipo
+																							$current_row->section_tipo //$current_row->lc_object->section_tipo
 																							);
 										#dump($current_component, ' current_component ++ '.to_string()."  "); #exit();	
 										$print_options = new stdClass();
