Fixed css issue when visualize portals on small resolution screens

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -470,13 +470,9 @@
 		}
 		.table_row {
 			//background-color: #FFC5AE;
-
 			display: flex;
-			//display: -webkit-flex;
 			flex-direction: row;
-			//-webkit-flex-direction: row;
-			flex-wrap: nowrap;
-			//-webkit-flex-wrap: nowrap;
+			flex-wrap: wrap;
 			width: 100%;
 			padding: 0;
 			//padding-left: 15px;
