--- a/lib/dedalo/component_html_text/css/component_html_text.less
+++ b/lib/dedalo/component_html_text/css/component_html_text.less
@@ -4,71 +4,82 @@
 // Usage
 @import "@{common_css}/library.less"; 
 
+// css_wrap_html_text
+	.css_wrap_html_text, .css_wrap_html_text_tm { 
+		
+		height: 300px;
 
-.css_wrap_html_text, .css_wrap_html_text_tm {
-	
-}
-.css_wrap_html_text .css_label {
-	display: table;
-}
-/*.html_text_content { width:82.6%;padding:0; vertical-align:top; display:inline-block; }*/
-.css_wrap_html_text .content_data {
-	width: 99.3%;
-	padding: 0;
-	vertical-align: top;
-	display: inline-block;
+		>.css_label {
+			display: table;
+		}
 
-}
+		>.content_data {
+			width: 99.3%;
+			padding: 0;
+			vertical-align: top;
+			display: inline-block;
+
+		}
+
+		.component_tools_container {
+			position: absolute;
+		}
+
+	}
+
+
+
+
 /* PORTAL LIST MODE */
-.section_edit_in_portal_td_row .content_data {
-	width: 100%;
-}
+	.section_edit_in_portal_td_row .content_data {
+		width: 100%;
+	}
 /* SPAN DATO MOSTRADO EN LOS LISTADOS DE PORTAL */
-.section_list_td_row .css_html_text_wrap span {
-	display: inline-block;
-	width: auto;
-	/*max-width: 110px;*/
-	text-overflow: ellipsis;
-	overflow: hidden;
-	/*white-space: nowrap;*/
-}
+	.section_list_td_row .css_html_text_wrap span {
+		display: inline-block;
+		width: auto;
+		/*max-width: 110px;*/
+		text-overflow: ellipsis;
+		overflow: hidden;
+		/*white-space: nowrap;*/
+	}
 /* TOOL_LANG MODE */
-.html_text_tool_lang .content_data {
-	width: 100%;
-}
+	.html_text_tool_lang .content_data {
+		width: 100%;
+	}
 
 
 /*-- TOOL TRANSCRIPTION MODE --*/
-.html_text_tool_transcription .content_data {
-	width: 98.9%;	
-	padding: 0;
-	padding-left: 4px;
-	}
-	.html_text_tool_transcription .css_label {
-		display: none !important;
-	}
+	.html_text_tool_transcription .content_data {
+		width: 98.9%;	
+		padding: 0;
+		padding-left: 4px;
+		}
+		.html_text_tool_transcription .css_label {
+			display: none !important;
+		}
 
 
 /* HTML_TEXT editor */
-.css_html_text {
-	padding: 3px;
-	border: 1px solid #9E9E9E;
-	border-radius: 3px;	
-	box-shadow: inset 0 0 6px #999999;
-	width: 81.5%;
-	vertical-align: top;
-	/*min-height:14px;*/
+	.css_html_text {
+		padding: 3px;
+		border: 1px solid #9E9E9E;
+		border-radius: 3px;	
+		box-shadow: inset 0 0 6px #999999;
+		width: 81.5%;
+		vertical-align: top;
+		/*min-height:14px;*/
 
-	height: 1800px;
-}
-.css_html_text:hover {
-	background-color: #F1F1F1;
-}
-.css_html_text:focus {	
-	box-shadow: 0 0 5px #CCC;
-}
-.css_html_text:active {
-}
+		height: 1800px;
+	}
+	.css_html_text:hover {
+		background-color: #F1F1F1;
+	}
+	.css_html_text:focus {	
+		box-shadow: 0 0 5px #CCC;
+	}
+	.css_html_text:active {
+	}
 
 
 
@@ -81,12 +92,12 @@
 }
 
 /*----- time machine page show ------*/
-.wrap_time_machine_page .html_text_content {
-	width: 100%;
-	min-height: 500px;
-	display: block;
-	overflow: auto;
-}
+	.wrap_time_machine_page .html_text_content {
+		width: 100%;
+		min-height: 500px;
+		display: block;
+		overflow: auto;
+	}
 
 .css_wrap_html_text .dato_refecence_default_lang {
 	font-family: Verdana, Geneva, sans-serif;
@@ -99,27 +110,22 @@
 	margin-bottom: 5px;
 }
 
-/* SEARCH
---------------------------------------------------- */
-.css_wrap_html_text_search .content_data {
-	width: 83%;
-}
 
-.css_wrap_html_text_search .css_label {
-	display: inline-block;
-}
+// SEARCH
+	.css_wrap_html_text_search {
+
+		>.css_label {
+			display: inline-block;
+		}
+
+		>.content_data {
+			width: 83%;
+		}
+	}
 
 
 .mce-branding-powered-by {
 	display: none;
-}
-
-
-
-/* COMPONENT_TOOLS_CONTAINER
---------------------------------------------------- */
-.css_wrap_html_text .component_tools_container {
-	position: absolute;
 }
 
 
