--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -472,7 +472,7 @@
 			//background-color: #FFC5AE;
 			display: flex;
 			flex-direction: row;
-			flex-wrap: wrap;
+			//flex-wrap: wrap;
 			width: 100%;
 			padding: 0;
 			//padding-left: 15px;
