Fixed css issue when component_html_text is showed with very long height on paginate 2

--- a/lib/dedalo/component_html_text/css/component_html_text.less
+++ b/lib/dedalo/component_html_text/css/component_html_text.less
@@ -7,7 +7,7 @@
 // css_wrap_html_text
 	.css_wrap_html_text, .css_wrap_html_text_tm { 
 		
-		height: 300px;
+		//height: 300px;
 
 		>.css_label {
 			display: table;
