Updated login to properly manage saml login requests

--- a/lib/dedalo/login/html/login_edit.phtml
+++ b/lib/dedalo/login/html/login_edit.phtml
@@ -91,8 +91,9 @@
 
 			// SAML login
 				if (defined('SAML_CONFIG') && SAML_CONFIG['active']===true) {
-					$html_content .= '<button type="button" class="btn btn-success btn-block autologin" onclick="login.autologin(\''.SAML_CONFIG['url'].'\')">'.label::get_label('autologin').'</button>';
-					if(DEVELOPMENT_SERVER===true) {
+					$button_label = 'Autologin';// label::get_label('autologin')
+					$html_content .= '<button type="button" class="btn btn-success btn-block autologin" onclick="login.autologin(\''.SAML_CONFIG['url'].'\')">'.$button_label.'</button>';
+					if(SAML_CONFIG['debug']===true) {
 						$html_content .= '<br>SAML ';
 						$html_content .= '   <a href="'.SAML_CONFIG['url'].'/metadata.php">Metadata</a>';
 						$html_content .= ' | <a href="'.SAML_CONFIG['url'].'/acs.php">ACS</a>';
