Add the controller section (section_lis) to show / hide and copy data to the normal section with trigger defined in the ontology of the component

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -518,3 +518,8 @@ div.dato_refecence_default_lang {
 				color: #f5c39f !important;
 			}
    
+   /* Read only / editable
+	----------------------------------------*/
+	.read_only{
+		pointer-events: none;
+	}
