--- a/lib/dedalo/component_select/html/component_select_edit.phtml
+++ b/lib/dedalo/component_select/html/component_select_edit.phtml
@@ -94,14 +94,17 @@
 			$html_content .= "<a href=\"javascript:;\" class=\"icon_bs link edit_select edit_hidden\" onclick=\"component_select.open_section(this)\"></a>";
 
 
+			// components_controller
+				if( isset($propiedades->controller) && $propiedades->controller===true ){
+					$html_content .= "<input class=\"components_controller\" value='".json_encode($controller_data)."'>";
+				}
+
+
 			if(SHOW_DEBUG===true) {
 				$html_content .= "<div class=\"debug_info notes\">".json_encode( $dato )."</div>";				
 				#$html_content .= " <span class=\"css_span_debugger\" id=\"debugger_{$tipo}\" >{$debugger}</span>";
+				#$html_content .= '<pre  style="position: absolute;" >'.json_encode($controller_data, JSON_PRETTY_PRINT).'</pre>';
 			}
-			if( isset($propiedades->controller) && $propiedades->controller === true){
-					$html_content .= "<input class=\"components_controller\" value=".json_encode($controller_data).">";
-			}
-
 
 			#
 			# JS Init component
