Change the dato to number (int or float) in the component_number

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -142,7 +142,7 @@
 
 /* INPUTS
 ------------------------------------------------------- */
-input[type="text"], input[type="password"], input[type="url"],textarea {
+input[type="text"], input[type="password"], input[type="url"], textarea, input[type="number"] {
 	padding: 3px;
 	padding-left: 6px;
 	padding-right: 6px;
