--- a/lib/dedalo/component_number/html/component_number_edit.phtml
+++ b/lib/dedalo/component_number/html/component_number_edit.phtml
@@ -39,7 +39,7 @@
 					}
 				}					
 
-				$html_content .= "<input class=\"css_number\" type=\"text\" onchange=\"component_number.Save(this)\" ";
+				$html_content .= "<input class=\"css_number\" type=\"number\" onchange=\"component_number.Save(this)\" ";
 				$html_content .= "name=\"{$input_name}\" ";
 				$html_content .= "data-tipo=\"{$tipo}\" ";
 				$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
