--- a/lib/dedalo/component_number/html/component_number_search.phtml
+++ b/lib/dedalo/component_number/html/component_number_search.phtml
@@ -22,7 +22,7 @@
 					break;
 						
 		case ($permissions>=1):		
-					$html_content .= "<input class=\"css_number\" type=\"text\" name=\"{$search_input_name}\" ";
+					$html_content .= "<input class=\"css_number\" type=\"number\" name=\"{$search_input_name}\" ";
 					$html_content .= "data-tipo=\"{$tipo}\" ";
 					$html_content .= "value=\"$valor\" ";
 					#$html_content .= "title=\"$html_title\" ";
