--- a/lib/dedalo/component_number/html/component_number_edit.phtml
+++ b/lib/dedalo/component_number/html/component_number_edit.phtml
@@ -47,7 +47,7 @@
 				$html_content .= "data-lang=\"{$lang}\" ";
 				$html_content .= 'value="'.$dato_string.'" ';
 				$html_content .= "title=\"$html_title\" ";
-				$html_content .= "onkeyup=\"component_number.keyup_fix_number_format(this)\" ";
+				//$html_content .= "onkeyup=\"component_number.keyup_fix_number_format(this)\" ";
 				$html_content .= "/>";
 				
 				$html_content .= "<span class=\"css_span_log\"></span>";					
